[wheel]
python-tag = py3

[metadata]
name = aioauth-client
version = attr: aioauth_client.__version__
url = https://github.com/klen/aioauth-client
description = OAuth support for Asyncio/Trio libraries
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, oauth
project_urls = 
	Documentation = https://github.com/klen/aioauth-client
	Source code = https://github.com/klen/aioauth-client
	Issue tracker = https://github.com/klen/aioauth-client/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
py_modules = aioauth_client
python_requires = >= 3.7
install_requires = 
        httpx   >= 0.17

[options.extras_require]
build = 
	bump2version
	twine
	wheel

[pylama]
ignore = E731,D211,D213,D203,D400,D401

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[pylama:example/*]
ignore = D

[tools:pytest]
addopts = -svx --mypy

[tox:tox]
envlist = py38,py39

[testenv]
deps = -r requirements-tests.txt
commands = 
	pytest tests.py
