[wheel]
python-tag = py3

[metadata]
name = aioauth-client
version = attr: aioauth_client.__version__
url = https://github.com/klen/aioauth-client
description = OAuth support for Asyncio/Trio libraries
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, oauth
project_urls = 
    Documentation = https://github.com/klen/aioauth-client
    Source code = https://github.com/klen/aioauth-client
    Issue tracker = https://github.com/klen/aioauth-client/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >= 3.7
packages = aioauth_client

[options.package_data]
aioauth-client = py.typed

[pylama]
ignore = E731,D211,D213,D203,D400,D401

[pylama:setup.py]
ignore = D

[pylama:tests/*]
ignore = D

[pylama:example/*]
ignore = D

[tool:pytest]
addopts = -svx --mypy

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps =
    -e .[tests]
commands = 
    pytest tests
